--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ cache:
     - /nix/store
 
 deploy:
-  local_dir: result/
+  local_dir: result
   provider: pages
   skip_cleanup: true
   github_token: $GITHUB_TOKEN
