--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,16 @@ nix: 2.2.2
 
 cache:
   directories:
-    - /nix/store
+    - $HOME/nix.store
+
+before_install:
+  - sudo mkdir -p /etc/nix
+  - echo "substituters = https://cache.nixos.org/ file://$HOME/nix.store" | sudo tee -a /etc/nix/nix.conf > /dev/null
+  - echo 'require-sigs = false' | sudo tee -a /etc/nix/nix.conf > /dev/null
+
+before_cache:
+  - mkdir -p $HOME/nix.store
+  - nix copy --to file://$HOME/nix.store -f default.nix buildInputs
 
 before_deploy:
   - rsync -avvL --inplace --no-whole-file result/ pages
