--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,6 @@ deploy:
   provider: pages
   skip_cleanup: true
   github_token: $GITHUB_TOKEN
-  keep_history: true
+  keep_history: false
   on:
     branch: master
