--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ deploy:
   local_dir: pages
   provider: pages
   edge: true
-  skip_cleanup: true
+  cleanup: true
   github_token: $GITHUB_TOKEN
   keep_history: false
   on:
