--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,9 @@ jobs:
       uses: actions/checkout@v3.0.2
     - name: Install Nix
       uses: cachix/install-nix-action@v17
+      with:
+        extra_nix_config: |
+          experimental-features =
     - name: Build presentations
       run: |
         nix build
