--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
       uses: cachix/install-nix-action@v17
       with:
         extra_nix_config: |
-          experimental-features =
+          experimental-features = nix-command
     - name: Build presentations
       run: |
         nix build
