--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,7 @@ jobs:
     - name: Install Nix
       uses: cachix/install-nix-action@v17
       with:
+        nix_path: 'nixpkgs=./nix'
         extra_nix_config: |
           experimental-features = nix-command
     - name: Build presentations
